Foi implementado o endpoint AccountController